...
                      _buildMenuButton(context, 'view.cameraMode.front'),
                      _buildMenuButton(context, 'view.cameraMode.right'),
                      const MenuDivider(),
                      _buildMenuButton(context, 'view.fullscreen'),
                    ],
                    child: const Text(
                      'View',
                      style: TextStyle(
                        fontSize: 10,
                        fontWeight: FontWeight.w500,
                      ),
                    ),
                  ),
...
